fixed a few questions, added a layout

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Justin Walker",
   "license": "MIT",
   "dependencies": {
+    "fs": "0.0.1-security",
     "inquirer": "^6.5.2"
   },
   "repository": {
